# This file is part of convertdate.
# http://github.com/fitnr/convertdate
# Licensed under the MIT license:
# http://opensource.org/licenses/MIT
# Copyright (c) 2020-2, fitnr <fitnr@fakeisthenewreal>
[build-system]
requires = ["setuptools>=60.5.0", "wheel"]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 120
target-version = ["py39"]
include = 'py$'
skip-string-normalization = true

[tool.pylint.master]
fail-under = "8.77"

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "duplicate-code"
]

[tool.pylint.format]
max-line-length = 120

[tool.isort]
line_length = 120
