# This file is part of convertdate.
# http://github.com/fitnr/convertdate
# Licensed under the MIT license:
# http://opensource.org/licenses/MIT
# Copyright (c) 2020-2, fitnr <fitnr@fakeisthenewreal>
[project]
name = "convertdate"
description = "Converts between Gregorian dates and other calendar systems"
authors = [
    {name = "Neil Freeman", email = "contact@fakeisthenewreal.org"},
    {name = "Phil Schwartz"}
    ]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["calendar", "date", "time"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Religion",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Operating System :: OS Independent",
    ]
requires-python = ">= 3.7, <4"
dependencies = [
    "pymeeus>=0.3.13, <=1",
    ]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "convertdate.__version__" }

[project.urls]
Homepage = "https://github.com/fitnr/convertdate"

[project.optional-dependencies]
tests = [
    "coverage[toml]",
    "pylint",
    ]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "myst_parser",
    ]
dev = [
    "build",
    "black",
    "isort",
    ]

[build-system]
requires = ["setuptools>=61.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true
packages = [
    "convertdate",
    "convertdate.data",
]
package-dir = {"" = "src"}

[tool.black]
line-length = 120
target-version = ["py39"]
include = "py$"
skip-string-normalization = true

[tool.pylint.master]
fail-under = "8.77"

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "duplicate-code"
]

[tool.pylint.format]
max-line-length = 120

[tool.isort]
line_length = 120

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["I", "E"]
