# This file is part of convertdate.
# http://github.com/fitnr/convertdate
# Licensed under the MIT license:
# http://opensource.org/licenses/MIT
# Copyright (c) 2022, fitnr <fitnr@fakeisthenewreal>
[metadata]
name = convertdate
version = attr: convertdate.__version__
description = Converts between Gregorian dates and other calendar systems
author = Neil Freeman
author_email = contact@fakeisthenewreal.org
url = https://github.com/fitnr/convertdate
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
keywords: calendar, date, time
classifiers =
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Religion
    Topic :: Scientific/Engineering :: Astronomy
    Operating System :: OS Independent

[options]
zip_safe = True
python_requires = >= 3.6, <4
package_dir =
    =src
packages = find:
install_requires = 
	pymeeus>=0.3.13, <=1

[options.packages.find]
where = src

[options.extras_require]
tests =
	coverage
docs =
	sphinx
	sphinx_rtd_theme

[options.entry_points]
console_scripts =
   censusgeocode = censusgeocode.__main__:main
